Log: gcced, and fixed

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,5 +1,5 @@
 sources:
-  "BomberInstinct-0.8.9.tar.bz2": ec319c68e7e4e6e9ef96ac5700a05f40651bd523
-  "BomberInstinct-16.png.bz2": 6a4229b723bfca04e919f3a8b1004a898f03edc4
-  "BomberInstinct-32.png.bz2": 3466b936dab10dbbfb86b7e2c586880872e82192
-  "BomberInstinct-48.png.bz2": 3b461985116762546d56da396b3a5f1cac1e848b
+  BomberInstinct-0.8.9.tar.bz2: ec319c68e7e4e6e9ef96ac5700a05f40651bd523
+  BomberInstinct-16.png.bz2: 6a4229b723bfca04e919f3a8b1004a898f03edc4
+  BomberInstinct-32.png.bz2: 3466b936dab10dbbfb86b7e2c586880872e82192
+  BomberInstinct-48.png.bz2: 3b461985116762546d56da396b3a5f1cac1e848b
